# pt-web-vnc

./: .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: codeql.yml  deb-build.yml  deploy-python-release-on-publish.yml  test-all-commits.yml
debian/: changelog  control  copyright  pt-web-vnc-desktop.service  pt-web-vnc.install  pt-web-vnc.lintian-overrides  rules
debian/bullseye-overrides/: pt-web-vnc.lintian-overrides
debian/source/: lintian-overrides
pt_web_vnc/: __init__.py  activity_monitor.py  connection_details.py  display_activity_monitor.py  screenshot_monitor.py  utils.py  version.py  vnc.py
scripts/: pt-web-vnc
tests/: test_display_activity_monitor.py  test_e2e.py  test_ptwebvnccommands.py  test_vnc.py
