[metadata]
name = pt-web-vnc
version = file: pt_web_vnc/version.txt
author = pi-top (CEED Ltd)
author_email = deb-maintainers@pi-top.com
license = Apache Software License
description = pi-top Web VNC Tool
keywords = pi-top, raspberrypi
url = https://github.com/pi-top/pt-web-vnc
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
# install_requires =


include_package_data = True

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black

[tool:pytest]
norecursedirs =
    .git
    debian
asyncio_mode = auto
testpaths =
    tests
python_files = test_*.py


[options.extras_require]
test =
    mock
    pytest
    pytest-asyncio
    pytest-cov
    testpath
